[gd_scene load_steps=3 format=3 uid="uid://dqcj6n1sbx56l"]

[ext_resource type="Script" uid="uid://br11kjslxpx4b" path="res://scripts/competence_node.gd" id="1_comp"]
[ext_resource type="Theme" uid="uid://bk5igrtvvlm3j" path="res://themes/character_sheet_theme.tres" id="2_theme"]

[node name="CompetenceNode" type="VBoxContainer"]
clip_contents = true
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("2_theme")
theme_override_constants/separation = 2
script = ExtResource("1_comp")

[node name="RevealCheckBox" type="CheckBox" parent="."]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 12
text = "Révéler [Armé]?"

[node name="CompetenceContent" type="VBoxContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="HeaderContainer" type="HBoxContainer" parent="CompetenceContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="LevelLabel" type="Label" parent="CompetenceContent/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.94509804, 0.79607844, 1)
theme_override_font_sizes/font_size = 14
text = "N0"
vertical_alignment = 1

[node name="DiceLabel" type="Label" parent="CompetenceContent/HeaderContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_colors/font_color = Color(1, 0.94509804, 0.79607844, 1)
theme_override_font_sizes/font_size = 14
text = "0 Dés"
vertical_alignment = 1

[node name="NameLabel" type="Label" parent="CompetenceContent/HeaderContainer"]
clip_contents = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_font_sizes/font_size = 14
text = "[Armé]"
vertical_alignment = 1
text_overrun_behavior = 3

[node name="MarksProgressBar" type="ProgressBar" parent="CompetenceContent"]
custom_minimum_size = Vector2(0, 12)
layout_mode = 2
size_flags_horizontal = 3
show_percentage = false

[node name="MasteriesSeparator" type="HSeparator" parent="CompetenceContent"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MasteriesButtonsContainer" type="HBoxContainer" parent="CompetenceContent"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 4

[node name="MasteriesAccordionButton" type="Button" parent="CompetenceContent/MasteriesButtonsContainer"]
custom_minimum_size = Vector2(100, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
disabled = true
text = "▶ Maîtrises"

[node name="AddMasteryButton" type="Button" parent="CompetenceContent/MasteriesButtonsContainer"]
custom_minimum_size = Vector2(30, 16)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "+"

[node name="MasteriesContainer" type="VBoxContainer" parent="CompetenceContent"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 2

[node name="RealizeSeparator" type="HSeparator" parent="CompetenceContent"]
visible = false
layout_mode = 2
size_flags_horizontal = 3

[node name="RealizeButton" type="Button" parent="CompetenceContent"]
visible = false
custom_minimum_size = Vector2(80, 18)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 0
theme_override_font_sizes/font_size = 10
text = "Réaliser"
